Product bundle: Lots of refactoring. ShoppingCartItem and ProductBundleItem are now processed using encapsulated objects. Otherwise object references could lead to wrong results in price calculation.

--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Domain\Common\SocialSettings.cs" />
     <Compile Include="Domain\Directory\DeliveryTime.cs" />
     <Compile Include="Domain\Orders\OrderExtensions.cs" />
+    <Compile Include="Domain\Orders\OrganizedShoppingCartItem.cs" />
     <Compile Include="Domain\Stores\IStoreMappingSupported.cs" />
     <Compile Include="Domain\Stores\Store.cs" />
     <Compile Include="Domain\Stores\StoreExtensions.cs" />
