Product linkage: Implement cross-linkage of products through variant attributes

--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Domain\Catalog\ProductBundleItemAttributeFilter.cs" />
     <Compile Include="Domain\Catalog\ProductBundleItem.cs" />
     <Compile Include="Domain\Catalog\ProductType.cs" />
+    <Compile Include="Domain\Catalog\ProductVariantAttributeValueType.cs" />
     <Compile Include="Domain\Cms\ContentSliderSettings.cs" />
     <Compile Include="Domain\Common\CompanyInformationSettings.cs" />
     <Compile Include="Domain\Common\ContactDataSettings.cs" />
