Product linkage: Merchant can add and remove a product linkage

--- a/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
+++ b/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
@@ -1193,6 +1193,9 @@
   <ItemGroup>
     <Content Include="Views\Product\BundleItemEditPopup.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Product\ProductAttributeValueLinkagePopup.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
