Added bin/[Platform] as process-specific environment path to ensure that unmanaged native dependencies can be resolved successfully (ClearScript.V8 had issues when VC++ 11 Redist was not installed on target server)

--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -1110,7 +1110,7 @@
     <Content Include="Content\bootstrap\js\bootstrap-typeahead.js" />
     <Content Include="Content\files\ExportImport\Index.htm" />
     <Content Include="Content\files\Index.htm" />
-    <None Include="Content\bootstrap\custom\image-gallery.less" />
+    <Content Include="Content\bootstrap\custom\image-gallery.less" />
     <Content Include="Content\bootstrap\js\custom\bootstrap-image-gallery.js" />
     <Content Include="Content\bootstrap\custom\images\loading.gif" />
     <Content Include="Content\fileupload\fileupload.css" />
