More EF Migrations

--- a/src/Plugins/Shipping.ByWeight/SmartStore.Plugin.Shipping.ByWeight.csproj
+++ b/src/Plugins/Shipping.ByWeight/SmartStore.Plugin.Shipping.ByWeight.csproj
@@ -41,7 +41,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'EFMigrations|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\EFMigrations\</OutputPath>
+    <OutputPath>..\..\Presentation\SmartStore.Web\bin\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -113,7 +113,11 @@
     <Compile Include="..\..\AssemblyVersionInfo.cs">
       <Link>Properties\AssemblyVersionInfo.cs</Link>
     </Compile>
-    <Compile Include="Data\EfStartUpTask.cs" />
+    <Compile Include="Data\Migrations\201403080200108_Initial.cs" />
+    <Compile Include="Data\Migrations\201403080200108_Initial.Designer.cs">
+      <DependentUpon>201403080200108_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Data\Migrations\Configuration.cs" />
     <Compile Include="ShippingByWeightSettings.cs" />
     <Compile Include="Controllers\ShippingByWeightController.cs" />
     <Compile Include="Data\ShippingByWeightRecordMap.cs" />
@@ -151,6 +155,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Data\Migrations\201403080200108_Initial.resx">
+      <DependentUpon>201403080200108_Initial.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\ShippingByWeight\Configure.cshtml" />
     <Content Include="icon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
