--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -98,20 +98,24 @@
     <Compile Include="..\..\AssemblyVersionInfo.cs">
       <Link>Properties\AssemblyVersionInfo.cs</Link>
     </Compile>
-    <Compile Include="DbMigrationContext.cs" />
-    <Compile Include="Extensions\DbMigrationExtensions.cs" />
+    <Compile Include="Setup\DbMigrationContext.cs" />
     <Compile Include="Extensions\IDbContextExtensions.cs" />
     <Compile Include="Extensions\BaseEntityExtensions.cs" />
     <Compile Include="Extensions\DataReaderExtensions.cs" />
     <Compile Include="Extensions\DbContextExtensions.cs" />
     <Compile Include="Extensions\MiscExtensions.cs" />
     <Compile Include="Extensions\SqlDataReaderExtensions.cs" />
-    <Compile Include="Initializers\CreateCeDatabaseIfNotExists.cs" />
-    <Compile Include="Initializers\DropCreateCeDatabaseAlways.cs" />
-    <Compile Include="Initializers\DropCreateCeDatabaseIfModelChanges.cs" />
-    <Compile Include="Initializers\MigrateDatabaseToLatestVersionEx.cs" />
-    <Compile Include="Initializers\SqlCeInitializer.cs" />
-    <Compile Include="Initializers\CreateTablesIfNotExist.cs" />
+    <Compile Include="Setup\DbSeedingMigrator.cs" />
+    <Compile Include="Setup\IDbMigrationExtensions.cs" />
+    <Compile Include="Setup\IMigrationSeeder.cs" />
+    <Compile Include="Setup\InstallDatabaseInitializer.cs" />
+    <Compile Include="Setup\MigrateDatabaseInitializer2.cs" />
+    <Compile Include="Setup\_Obsolete\CreateCeDatabaseIfNotExists.cs" />
+    <Compile Include="Setup\_Obsolete\DropCreateCeDatabaseAlways.cs" />
+    <Compile Include="Setup\_Obsolete\DropCreateCeDatabaseIfModelChanges.cs" />
+    <Compile Include="Setup\MigrateDatabaseInitializer.cs" />
+    <Compile Include="Setup\_Obsolete\SqlCeInitializer.cs" />
+    <Compile Include="Setup\_Obsolete\CreateTablesIfNotExist.cs" />
     <Compile Include="EfDataProviderFactory.cs" />
     <Compile Include="IEfDataProvider.cs" />
     <Compile Include="Mapping\Catalog\ProductBundleItemAttributeFilterMap.cs" />
@@ -239,6 +243,15 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Sql\Indexes.SqlServer.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Sql\Indexes.Reverse.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Sql\Indexes.SqlServer.Reverse.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Sql\StoredProcedures.Reverse.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
