--- a/src/Libraries/SmartStore.Data/packages.config
+++ b/src/Libraries/SmartStore.Data/packages.config
@@ -5,4 +5,5 @@
   <package id="EntityFramework.SqlServerCompact" version="6.0.2" targetFramework="net45" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" />
   <package id="Microsoft.SqlServer.Scripting" version="11.0.2100.61" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
 </packages>
