--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -63,6 +63,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="Glimpse:DisableAsyncSupport" value="true" />
     <add key="GoogleMerchantID" value="" />
     <add key="GoogleMerchantKey" value="" />
     <add key="GoogleEnvironment" value="Sandbox" />
