Minor code optimization

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -13,7 +13,7 @@
       <section name="core" type="JavaScriptEngineSwitcher.Core.Configuration.CoreConfiguration, JavaScriptEngineSwitcher.Core" />
     </sectionGroup>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  </configSections>
+  </configSections> 
   <bundleTransformer xmlns="http://tempuri.org/BundleTransformer.Configuration.xsd">
     <core>
       <css defaultMinifier="MicrosoftAjaxCssMinifier" usePreMinifiedFiles="true" disableNativeCssRelativePathTransformation="false">
@@ -63,6 +63,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="vs:EnableBrowserLink" value="false" />
     <add key="Glimpse:DisableAsyncSupport" value="true" />
     <add key="GoogleMerchantID" value="" />
     <add key="GoogleMerchantKey" value="" />
@@ -97,7 +98,7 @@
     <customErrors defaultRedirect="errorpage.htm" mode="RemoteOnly">
       <error statusCode="404" redirect="~/404" />
     </customErrors>
-    <trace enabled="true" localOnly="true" />
+    <trace enabled="true" localOnly="true" pageOutput="true" requestLimit="40" />
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
@@ -122,6 +123,7 @@
         <add namespace="Telerik.Web.Mvc.UI" />
       </namespaces>
     </pages>
+    <httpModules />
     <httpRuntime targetFramework="4.5" maxRequestLength="1536000" executionTimeout="5400" maxQueryStringLength="16384" />
     <httpHandlers>
       <add path="*.less" verb="GET" type="SmartStore.Web.Framework.Themes.LessCssHttpHandler, SmartStore.Web.Framework" />
@@ -268,6 +270,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.1.0.0" newVersion="5.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Transactions" publicKeyToken="b77a5c561934e089" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
