--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -97,9 +97,9 @@
     <browserCaps configSource="browserCaps.config" />
     <customErrors defaultRedirect="errorpage.htm" mode="RemoteOnly">
       <error statusCode="404" redirect="~/404" />
-    </customErrors>
+    </customErrors> 
     <trace enabled="true" localOnly="true" pageOutput="true" requestLimit="40" />
-    <compilation debug="true" targetFramework="4.5">
+    <compilation debug="true" targetFramework="4.5" batch="false" numRecompilesBeforeAppRestart="250" optimizeCompilations="true">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
         <add assembly="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
