--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -87,6 +87,7 @@
       <HintPath>..\..\packages\Newtonsoft.Json.6.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.EnterpriseServices" />
@@ -218,6 +219,8 @@
     <Compile Include="Directory\GeoCountryLookup.cs" />
     <Compile Include="Directory\IDeliveryTimeService.cs" />
     <Compile Include="Directory\DeliveryTimeService.cs" />
+    <Compile Include="Events\EventConsumerMetadata.cs" />
+    <Compile Include="Events\AsyncConsumerAttribute.cs" />
     <Compile Include="Events\EventPublisher.cs" />
     <Compile Include="Events\EventPublisherExtensions.cs" />
     <Compile Include="Events\IConsumer.cs" />
