--- a/src/Tests/SmartStore.Data.Tests/SmartStore.Data.Tests.csproj
+++ b/src/Tests/SmartStore.Data.Tests/SmartStore.Data.Tests.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Catalog\ProductTagPersistenceTests.cs" />
     <Compile Include="Polls\PollPersistenceTests.cs" />
     <Compile Include="Security\AclRecordPersistenceTests.cs" />
+    <Compile Include="Setup\LocaleResourcesBuilderTests.cs" />
     <Compile Include="Shipping\ShipmentItemPersistenceTests.cs" />
     <Compile Include="Shipping\ShipmentPersistenceTests.cs" />
     <Compile Include="TestDbConfiguration.cs" />
@@ -178,9 +179,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Cms\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>if not exist "$(TargetDir)x86" md "$(TargetDir)x86" 
