--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -225,9 +225,9 @@
     <Compile Include="Events\EventPublisherExtensions.cs" />
     <Compile Include="Events\IConsumer.cs" />
     <Compile Include="Events\IEventPublisher.cs" />
-    <Compile Include="Events\ISubscriptionService.cs" />
+    <Compile Include="Events\IConsumerFactory.cs" />
     <Compile Include="Events\NullEventPublisher.cs" />
-    <Compile Include="Events\SubscriptionService.cs" />
+    <Compile Include="Events\DefaultConsumerFactory.cs" />
     <Compile Include="ExportImport\DataSegmenter.cs" />
     <Compile Include="Extensions\NameValueCollectionExtensions.cs" />
     <Compile Include="Filter\FilterCriteria.cs" />
