--- a/src/Tests/SmartStore.Data.Tests/packages.config
+++ b/src/Tests/SmartStore.Data.Tests/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.1.1-alpha1-30318" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
   <package id="EntityFramework.SqlServerCompact" version="6.1.0" targetFramework="net45" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" />
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
