Forget to include sample files into web project

--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -536,6 +536,8 @@
     <Content Include="Content\samples\acer-logo.jpg" />
     <Content Include="Content\samples\beethoven-fur-elise.mp3" />
     <Content Include="Content\samples\Beethoven.jpg" />
+    <Content Include="Content\samples\category_gaming.jpg" />
+    <Content Include="Content\samples\category_gaming_accessories.jpg" />
     <Content Include="Content\samples\clouds.png" />
     <Content Include="Content\samples\company_logo.png" />
     <Content Include="Content\samples\Dell_Logo.png" />
@@ -545,6 +547,21 @@
     <Content Include="Content\samples\msi_logo1.jpg" />
     <Content Include="Content\samples\music.png" />
     <Content Include="Content\samples\packshot-net.png" />
+    <Content Include="Content\samples\sony-Dualshock3WirelessCont.jpg" />
+    <Content Include="Content\samples\sony-Dualshock4WirelessCont.jpg" />
+    <Content Include="Content\samples\sony-logo.jpg" />
+    <Content Include="Content\samples\sony-ps3-black.jpg" />
+    <Content Include="Content\samples\sony-ps3-plus-game.jpg" />
+    <Content Include="Content\samples\sony-ps3-white.jpg" />
+    <Content Include="Content\samples\sony-PS3AssassinsCreedBundle.jpg" />
+    <Content Include="Content\samples\sony-ps4-bundle.jpg" />
+    <Content Include="Content\samples\sony-ps4-camera.jpg" />
+    <Content Include="Content\samples\sony-ps4.jpg" />
+    <Content Include="Content\samples\ubisoft-assassins-creed-3.jpg" />
+    <Content Include="Content\samples\ubisoft-driver-san-francisco.jpg" />
+    <Content Include="Content\samples\ubisoft-logo.jpg" />
+    <Content Include="Content\samples\ubisoft-prince-of-persia.jpg" />
+    <Content Include="Content\samples\ubisoft-watchdogs.jpg" />
     <Content Include="Content\samples\vivaldi-four-seasons-spring.mp3" />
     <Content Include="Content\x-editable\bootstrap-editable.css" />
     <Content Include="Content\x-editable\img\clear.png" />
